--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,13 +15,23 @@ jobs:
   test-command:
     runs-on: ubuntu-latest
     steps:
-      - name: ls
+      - name: Install prerequisites for puppeteer tests
         run: |
-          ls -laht
-
-      - name: pwd
-        run: |
+          echo "${{ secrets.GIT_SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          ssh-keyscan git.onlyoffice.com >> ~/.ssh/known_hosts
+          ssh-keyscan github.com >> ~/.ssh/known_hosts
+          git clone git@git.onlyoffice.com:ONLYOFFICE-QA/Dep.Tests.git
+          cd Dep.Tests
+          sed -i 's/url=https:\/\/github.com\/ONLYOFFICE-data\/pp-files.git/url = git@github.com:ONLYOFFICE-data\/pp-files.git/' .gitmodules
+          git submodule update --init puppeteer/files
+          sed -i 's/"headless": false/"headless": true/' puppeteer/config_chrome_linux.json
+          cd puppeteer/engine
+          npm install
           pwd
 
-      - name: apt
-        run: sudo apt update
+      - name: Smoke puppeteer test
+        run: |
+          pwd
+          ls
+          python3 run.py ../tests/desktop/word/smoke/open-close-file-tab.js
