--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,38 +15,15 @@ jobs:
   test-command:
     runs-on: ubuntu-latest
     steps:
-      - name: Install prerequisites for puppeteer tests
+      - name: test
         run: |
-          sudo apt-get update
-          curl -fsSL https://deb.nodesource.com/setup_20.x | sudo -E bash -
-          sudo apt-get install -y nodejs
-          sudo apt install -y python3 python3-pip
-          wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
-          sudo dpkg -i google-chrome-stable_current_amd64.deb
-          sudo apt-get install -f -y
-          google-chrome --version
-          python3 --version
-          pip3 --version
-          node -v
-          npm -v
-
-      - name: clone repo
-        run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.GIT_SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan git.onlyoffice.com >> ~/.ssh/known_hosts
-          ssh-keyscan github.com >> ~/.ssh/known_hosts
-          git clone git@git.onlyoffice.com:ONLYOFFICE-QA/Dep.Tests.git
-          cd Dep.Tests
-          sed -i 's/url=https:\/\/github.com\/ONLYOFFICE-data\/pp-files.git/url = git@github.com:ONLYOFFICE-data\/pp-files.git/' .gitmodules
-          git submodule update --init puppeteer/files
-          sed -i 's/"headless": false/"headless": true/' puppeteer/config_chrome_linux.json
-          cd puppeteer/engine
-          npm install
-
-      - name: Smoke puppeteer test
-        run: |
-          cd Dep.Tests/puppeteer/engine
-          python3 run.py --prcache
-          python3 run.py ../tests/desktop/word/smoke
+          echo "ls"
+          ls
+          echo "lscpu"
+          lscpu
+          echo "ip a"
+          ip a
+          echo "ifconfig"
+          ifconfig
+          echo "hostname -I"
+          hostname -I
